tkg/network-policy/scratch/go-conference-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: conference-app
  name: conference-app
  namespace: sandbox
spec:
  ports:
  - port: 8080
  selector:
    run: conference-app
  type: LoadBalancer
