tkg/network-policy/scratch/nsx-policy-deny-all-ns-sandbox.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: sandbox-deny-all
  namespace: sandbox
spec:
  podSelector: {}
  ingress: []
