tkg/network-policy/scratch/nsx-policy-podselector.yaml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
 name: nsx-policy-podselector
spec:
 podSelector:
   matchLabels:
     app: redis
 ingress:
 - from:
     - podSelector:
         matchLabels:
           app: guestbook
   ports:
     - port: 80
       protocol: TCP
