tkg/network-policy/scratch/nsxpol-allow-443-ns.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: web-allow-external
spec:
  podSelector:
    matchLabels:
      app: guestbook
  ingress:
  - ports:
    - port: 443
    from: []
